Fixed-to-bottom ad on vice.com is temporarily mispositioned during scrolling when the dynamic toolbar disappears (fixed inside fixed gets offset double-applied)
Categories
(Core :: Panning and Zooming, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox133 | --- | fixed |
People
(Reporter: mstange, Assigned: botond)
References
(Blocks 3 open bugs)
Details
Attachments
(4 files)
Steps to reproduce:
- In Firefox for Android, load the attached testcase.
- Scroll down.
Expected results:
The box at the bottom should stay attached to the bottom toolbar.
Actual results:
The box at the bottom slides down too fast as the bottom toolbar disappears, getting partially clipped. Once the bottom toolbar is fully gone, the box jumps back fully onscreen.
I encountered this with an ad on vice.com when I was testing random web pages.
| Reporter | ||
Comment 1•2 years ago
|
||
Updated•2 years ago
|
Comment 2•2 years ago
|
||
The severity field is not set for this bug.
:botond, could you have a look please?
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 3•2 years ago
|
||
This is one of the bugs we're tracking in FFXP-2856.
Comment 4•1 year ago
|
||
Attaching file is a modified version of the test case in comment 1. A difference is the inner one is fixed to the top, not to the bottom.
In this specific case, if the toolbar is positioned at the bottom, the inner one should stick to the top border, but actually it's not.
From APZ perspective, while the toolbar is moving, for the inner one we do set zero translation here properly, but even with the zero translation, it's moving because the outer translation somehow affects the inner one.
Is this more or less an issue in WebRender?
| Assignee | ||
Comment 5•1 year ago
|
||
Fixed elements nested inside an element that is already fixed would get
double translated otherwise.
Updated•1 year ago
|
| Assignee | ||
Comment 6•1 year ago
•
|
||
The attached patch fixes the original testcase (bottom-fixed element nested inside bottom-fixed element).
A fix for the modified test case (top-fixed element inside bottom-fixed element) will be deferred to a follow-up bug.
| Assignee | ||
Comment 7•1 year ago
|
||
(In reply to Botond Ballo [:botond] from comment #6)
A fix for the modified test case will be deferred to a follow-up bug.
Filed bug 1926652 for this.
Comment 9•1 year ago
|
||
| bugherder | ||
Description
•