Bug 1894136 - Only apply dynamic toolbar translation to the root of a subtree of fixed content. r=dlrobertson

Fixed elements nested inside an element that is already fixed would get
double translated otherwise.

Differential Revision: https://phabricator.services.mozilla.com/D226695